RA: 2.  Router, App Layout, i18n, eslint, stylelint, jest: Non-existent routes. Loader for loading pages : lesson_21

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,6 @@
   "MainPage": "Main Page",
   "Main": "Main",
   "About": "About",
-  "Lang": "En"
+  "Lang": "En",
+  "NotFoundPage": "Page not found 404"
 }
