--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -4,5 +4,6 @@
   "MainPage": "Головна сторінка",
   "Main": "Головна",
   "About": "Про сайт",
-  "Lang": "Ua"
+  "Lang": "Ua",
+  "NotFoundPage": "Сторінку не знайдено 404"
 }
