RA: 3. ErrorBoundary: lesson_22

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -5,5 +5,7 @@
   "Main": "Головна",
   "About": "Про сайт",
   "Lang": "Ua",
-  "NotFoundPage": "Сторінку не знайдено 404"
+  "NotFoundPage": "Сторінку не знайдено 404",
+  "unexpectedError": "Сталася непередбачувана помилка",
+  "reload": "Перезавантажити сторінку"
 }
