--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -4,7 +4,8 @@
   "MainPage": "Головна сторінка",
   "Main": "Головна",
   "About": "Про сайт",
-  "Lang": "Ua",
+  "Lang": "Українська",
+  "ShortLang": "UA",
   "NotFoundPage": "Сторінку не знайдено 404",
   "unexpectedError": "Сталася непередбачувана помилка",
   "reload": "Перезавантажити сторінку"
