--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -8,5 +8,8 @@
   "ShortLang": "UA",
   "NotFoundPage": "Сторінку не знайдено 404",
   "unexpectedError": "Сталася непередбачувана помилка",
-  "reload": "Перезавантажити сторінку"
+  "reload": "Перезавантажити сторінку",
+  "username": "Ім'я користувача",
+  "password": "Пароль",
+  "login": "Увійти"
 }
