RA: 4. Authorization. Reducers, slices, async thunk. Custom text LABEL: lesson_34

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,7 @@
   "reload": "Reload page",
   "username": "Username",
   "password": "Password",
-  "login": "Login"
+  "login": "Login",
+  "Login form": "Login form",
+  "loginError": "Incorrect username or password"
 }
