--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -11,5 +11,7 @@
   "reload": "Перезавантажити сторінку",
   "username": "Ім'я користувача",
   "password": "Пароль",
-  "login": "Увійти"
+  "login": "Увійти",
+  "Login form": "Форма входу",
+  "loginError": "Неправильне ім'я користувача або пароль"
 }
