RA: 5. Profile Page. Optimizing Redraws. Learning to Use Memo: lesson_37

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,7 @@
   "password": "Password",
   "login": "Login",
   "Login form": "Login form",
-  "loginError": "Incorrect username or password"
+  "loginError": "Incorrect username or password",
+  "ProfilePage": "Profile Page",
+  "Profile": "Profile"
 }
