--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -13,5 +13,7 @@
   "password": "Пароль",
   "login": "Увійти",
   "Login form": "Форма входу",
-  "loginError": "Неправильне ім'я користувача або пароль"
+  "loginError": "Неправильне ім'я користувача або пароль",
+  "ProfilePage": "Сторінка профілю",
+  "Profile": "Профіль"
 }
