RA: 6. Profile module: Profile module. Avatar. Editing and saving. Private routes lesson_41

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -2,5 +2,7 @@
   "ProfilePage": "ProfilePage",
   "Edit": "Edit",
   "First name": "First name",
-  "Last name": "Last name"
+  "Last name": "Last name",
+  "Error": "Error occured",
+  "Reload": "Reload page"
 }
