--- a/public/locales/uk/profile.json
+++ b/public/locales/uk/profile.json
@@ -2,5 +2,7 @@
   "ProfilePage": "Сторінка профілю",
   "Edit": "Редагувати",
   "First name": "Ім'я",
-  "Last name": "Прізвище"
+  "Last name": "Прізвище",
+  "Error": "Сталася помилка",
+  "Reload": "Перезавантажити сторінку"
 }
