RA: 6. Profile module: Profile module. Avatar. Editing and saving. Private routes lesson_41

--- a/public/locales/uk/profile.json
+++ b/public/locales/uk/profile.json
@@ -4,5 +4,9 @@
   "First name": "Ім'я",
   "Last name": "Прізвище",
   "Error": "Сталася помилка",
-  "Reload": "Перезавантажити сторінку"
+  "Reload": "Перезавантажити сторінку",
+  "Save": "Зберегти",
+  "Cancel": "Скасувати",
+  "Age": "Вік",
+  "City": "Місто"
 }
