--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -4,5 +4,9 @@
   "First name": "First name",
   "Last name": "Last name",
   "Error": "Error occured",
-  "Reload": "Reload page"
+  "Reload": "Reload page",
+  "Save": "Save",
+  "Cancel": "Cancel",
+  "Age": "Age",
+  "City": "City"
 }
