RA: 7. Articles Page and Article Details Page. Decomposition. Entities. Webpack publicPath LABEL, lesson_48

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,8 @@
   "MainPage": "Main Page",
   "Main": "Main",
   "About": "About",
+  "Profile": "Profile",
+  "Articles": "Articles",
   "Lang": "English",
   "ShortLang": "EN",
   "NotFoundPage": "Page not found 404",
@@ -15,7 +17,6 @@
   "Login form": "Login form",
   "loginError": "Incorrect username or password",
   "ProfilePage": "Profile Page",
-  "Profile": "Profile",
   "Incorrect user data": "Incorrect user data",
   "Age is required": "Age is required",
   "Country is required": "Country is required",
