--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -4,6 +4,8 @@
   "MainPage": "Головна сторінка",
   "Main": "Головна",
   "About": "Про сайт",
+  "Profile": "Профіль",
+  "Articles": "Статті",
   "Lang": "Українська",
   "ShortLang": "UA",
   "NotFoundPage": "Сторінку не знайдено 404",
@@ -15,7 +17,6 @@
   "Login form": "Форма входу",
   "loginError": "Неправильне ім'я користувача або пароль",
   "ProfilePage": "Сторінка профілю",
-  "Profile": "Профіль",
   "Incorrect user data": "Неправильні дані користувача",
   "Age is required": "Вік обов'язковий",
   "Country is required": "Країна обов'язкова",
