RA: 7. Entity article, async thunk, slices. Blocks. Skeleton loader, lesson_49

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,5 +1,7 @@
 {
   "ArticlePage": "Article Page",
   "ArticleDetailsPage": "Article Detail Page",
-  "Articles": "Articles"
+  "Articles": "Articles",
+  "ArtcicleNotFound": "Article not found",
+  "ArticleDetailsErrorTitle": "Article Details Error"
 }
