RA: 7. Article Page. Block Structure. Code Component. Copy LABEL, lesson_50 Part02

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,5 +21,6 @@
   "Age is required": "Age is required",
   "Country is required": "Country is required",
   "No data": "No data",
-  "Server error": "Server error"
+  "Server error": "Server error",
+  "Copy": "Copy"
 }
