RA: 7. 51 Comments Module. Data Normalization. EntityAdapter LABEL, lesson_51

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -22,5 +22,6 @@
   "Country is required": "Країна обов'язкова",
   "No data": "Немає даних",
   "Server error": "Помилка сервера",
-  "Copy": "Копіювати"
+  "Copy": "Копіювати",
+  "Comments": "Коментарі"
 }
