--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,5 +22,6 @@
   "Country is required": "Country is required",
   "No data": "No data",
   "Server error": "Server error",
-  "Copy": "Copy"
+  "Copy": "Copy",
+  "Comments": "Comments"
 }
