RA: 8. User Profiles. addCommentForm feature, lesson_52 Part002

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -23,5 +23,7 @@
   "No data": "Немає даних",
   "Server error": "Помилка сервера",
   "Copy": "Копіювати",
-  "Comments": "Коментарі"
+  "Comments": "Коментарі",
+  "Enter your comment": "Введіть свій коментар",
+  "Add comment": "Додати коментар"
 }
