--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,7 @@
   "No data": "No data",
   "Server error": "Server error",
   "Copy": "Copy",
-  "Comments": "Comments"
+  "Comments": "Comments",
+  "Enter your comment": "Enter your comment",
+  "Add comment": "Add comment"
 }
