RA: 8. List of articles. useHover. Switching view, lesson_54 Part003

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -25,5 +25,7 @@
   "Copy": "Копіювати",
   "Comments": "Коментарі",
   "Enter your comment": "Введіть свій коментар",
-  "Add comment": "Додати коментар"
+  "Add comment": "Додати коментар",
+  "readMore": "Читати далі",
+  "Back": "Назад"
 }
