--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,7 @@
   "Copy": "Copy",
   "Comments": "Comments",
   "Enter your comment": "Enter your comment",
-  "Add comment": "Add comment"
+  "Add comment": "Add comment",
+  "readMore": "Read more",
+  "Back": "Back"
 }
