RA: 9. Sort. Search. Tabs. useDebounce, lesson_59 Part002

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -3,5 +3,6 @@
   "ArticleDetailsPage": "Article Detail Page",
   "Articles": "Articles",
   "ArtcicleNotFound": "Article not found",
-  "ArticleDetailsErrorTitle": "Article Details Error"
+  "ArticleDetailsErrorTitle": "Article Details Error",
+  "SortBy": "Sort By"
 }
