--- a/public/locales/uk/article.json
+++ b/public/locales/uk/article.json
@@ -3,5 +3,6 @@
   "ArticleDetailsPage": " Сторінка деталей статті",
   "Articles": " Статті",
   "ArtcicleNotFound": " Стаття не знайдена",
-  "ArticleDetailsErrorTitle": " Помилка деталей статті"
+  "ArticleDetailsErrorTitle": " Помилка деталей статті",
+  "SortBy": " Сортувати за"
 }
