RA: 9. Sort. Search. Tabs. useDebounce, lesson_59 Part003

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -4,5 +4,11 @@
   "Articles": "Articles",
   "ArtcicleNotFound": "Article not found",
   "ArticleDetailsErrorTitle": "Article Details Error",
-  "SortBy": "Sort By"
+  "SortBy": "Sort By",
+  "By": "By",
+  "Asc": "Ascending",
+  "Desc": "Descending",
+  "DateOfCreation": "Date of creation",
+  "Title": "Title",
+  "Views": "Views"
 }
