--- a/public/locales/uk/article.json
+++ b/public/locales/uk/article.json
@@ -4,5 +4,11 @@
   "Articles": " Статті",
   "ArtcicleNotFound": " Стаття не знайдена",
   "ArticleDetailsErrorTitle": " Помилка деталей статті",
-  "SortBy": " Сортувати за"
+  "SortBy": " Сортувати за",
+  "By": "За",
+  "Asc": " Зростання",
+  "Desc": " Спадання",
+  "DateOfCreation": " Дата створення",
+  "Title": " Заголовок",
+  "Views": " Перегляди"
 }
