RA: 9. Sort. Search. Tabs. useDebounce, lesson_59 Part005

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -10,5 +10,6 @@
   "Desc": "Descending",
   "DateOfCreation": "Date of creation",
   "Title": "Title",
-  "Views": "Views"
+  "Views": "Views",
+  "Search": "Search: "
 }
