--- a/public/locales/uk/article.json
+++ b/public/locales/uk/article.json
@@ -10,5 +10,6 @@
   "Desc": " Спадання",
   "DateOfCreation": " Дата створення",
   "Title": " Заголовок",
-  "Views": " Перегляди"
+  "Views": " Перегляди",
+  "Search": " Пошук: "
 }
