--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -11,7 +11,7 @@
   "NotFoundPage": "Сторінку не знайдено 404",
   "unexpectedError": "Сталася непередбачувана помилка",
   "reload": "Перезавантажити сторінку",
-  "username": "Ім'я користувача",
+  "username": "Ім'я",
   "password": "Пароль",
   "login": "Увійти",
   "Login form": "Форма входу",
