RA: 9. Sort. Search. Tabs. useDebounce, lesson_59 Part011

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,5 +27,6 @@
   "Enter your comment": "Enter your comment",
   "Add comment": "Add comment",
   "readMore": "Read more",
-  "Back": "Back"
+  "Back": "Back",
+  "NotFoundArticle": "Article not found"
 }
