--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -27,5 +27,6 @@
   "Enter your comment": "Введіть свій коментар",
   "Add comment": "Додати коментар",
   "readMore": "Читати далі",
-  "Back": "Назад"
+  "Back": "Назад",
+  "NotFoundArticle": "Статтю не знайдено"
 }
