RA: 9. List of recommendations. Grouping reducers. Scrollbar LABEL, lesson_60 Part001

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,5 +28,6 @@
   "Add comment": "Add comment",
   "readMore": "Read more",
   "Back": "Back",
-  "NotFoundArticle": "Article not found"
+  "NotFoundArticle": "Article not found",
+  "Recommends": "Recommends"
 }
