--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -28,5 +28,6 @@
   "Add comment": "Додати коментар",
   "readMore": "Читати далі",
   "Back": "Назад",
-  "NotFoundArticle": "Статтю не знайдено"
+  "NotFoundArticle": "Статтю не знайдено",
+  "Recommends": "Рекомендації"
 }
