RA: 9. Creating and editing articles. Pages, lesson_61 Part001

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,6 +28,7 @@
   "Add comment": "Add comment",
   "readMore": "Read more",
   "Back": "Back",
+  "Edit": "Edit",
   "NotFoundArticle": "Article not found",
   "Recommends": "Recommends"
 }
