--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -28,6 +28,7 @@
   "Add comment": "Додати коментар",
   "readMore": "Читати далі",
   "Back": "Назад",
+  "Edit": "Редагувати",
   "NotFoundArticle": "Статтю не знайдено",
   "Recommends": "Рекомендації"
 }
