RA: 9. Creating and editing articles. Pages, lesson_61 Part002

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -1,4 +1,5 @@
 {
+  "AdvApp": "Розширений React додаток",
   "TestExample": "Тестовий переклад",
   "Translate": "Перекласти",
   "MainPage": "Головна сторінка",
@@ -30,5 +31,7 @@
   "Back": "Назад",
   "Edit": "Редагувати",
   "NotFoundArticle": "Статтю не знайдено",
-  "Recommends": "Рекомендації"
+  "Recommends": "Рекомендації",
+  "EditArticle": "Редагувати статтю: ",
+  "CreateNewArticle": "Створити нову статтю"
 }
