--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
+  "AdvApp": "Advanced React App",
   "TestExample": "Test translate",
   "Translate": "Translate",
   "MainPage": "Main Page",
@@ -30,5 +31,7 @@
   "Back": "Back",
   "Edit": "Edit",
   "NotFoundArticle": "Article not found",
-  "Recommends": "Recommends"
+  "Recommends": "Recommends",
+  "EditArticle": "Edit article: ",
+  "CreateNewArticle": "Create new article"
 }
