RA: 10. Dropdown. User avatar, lesson_68 Part004

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,5 +1,5 @@
 {
-  "ProfilePage": "ProfilePage",
+  "ProfilePage": "Profile",
   "Edit": "Edit",
   "First name": "First name",
   "Last name": "Last name",
