--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -17,7 +17,7 @@
   "login": "Увійти",
   "Login form": "Форма входу",
   "loginError": "Неправильне ім'я користувача або пароль",
-  "ProfilePage": "Сторінка профілю",
+  "ProfilePage": "Профіль",
   "Incorrect user data": "Неправильні дані користувача",
   "Age is required": "Вік обов'язковий",
   "Country is required": "Країна обов'язкова",
