--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,7 +17,7 @@
   "login": "Login",
   "Login form": "Login form",
   "loginError": "Incorrect username or password",
-  "ProfilePage": "Profile Page",
+  "ProfilePage": "Profile",
   "Incorrect user data": "Incorrect user data",
   "Age is required": "Age is required",
   "Country is required": "Country is required",
