--- a/public/locales/uk/profile.json
+++ b/public/locales/uk/profile.json
@@ -1,5 +1,5 @@
 {
-  "ProfilePage": "Сторінка профілю",
+  "ProfilePage": "Профіль",
   "Edit": "Редагувати",
   "First name": "Ім'я",
   "Last name": "Прізвище",
