RA: 11. RTK query. The beginning of a major refactoring, lesson_70 Part004

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -11,5 +11,6 @@
   "DateOfCreation": "Date of creation",
   "Title": "Title",
   "Views": "Views",
-  "Search": "Search: "
+  "Search": "Search: ",
+  "Error": "Error articcle not found"
 }
