--- a/public/locales/uk/article.json
+++ b/public/locales/uk/article.json
@@ -11,5 +11,6 @@
   "DateOfCreation": " Дата створення",
   "Title": " Заголовок",
   "Views": " Перегляди",
-  "Search": " Пошук: "
+  "Search": " Пошук: ",
+  "Error": " Помилка статті не знайдено"
 }
