RA: 11. RTK query. The beginning of a major refactoring, lesson_70 Part006

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -33,5 +33,6 @@
   "NotFoundArticle": "Article not found",
   "Recommends": "Recommends",
   "EditArticle": "Edit article: ",
-  "CreateNewArticle": "Create new article"
+  "CreateNewArticle": "Create new article",
+  "UserNotFound": "User not found"
 }
