RA: 12. Implementation of evaluation for the article. RTK mutations, queries, lesson_87

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,5 +34,6 @@
   "Recommends": "Recommends",
   "EditArticle": "Edit article: ",
   "CreateNewArticle": "Create new article",
-  "UserNotFound": "User not found"
+  "UserNotFound": "User not found",
+  "ratingTitle": "Rate this article"
 }
